src/test/deca/context/valid/or_valid.deca
{
	if( 3<5 || 2<4 ){
	    println("or is valid");
	}
}		