src/test/deca/context/invalid/notprovided/typecondition.deca
{
	if (5){
	   println("hello_everyone");
	}
}